echo dotnet root

--- a/.github/workflows/master_rpdemoappcicd.yml
+++ b/.github/workflows/master_rpdemoappcicd.yml
@@ -27,6 +27,8 @@ jobs:
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      - name: publish dotnet root location
+        run: echo ${{env.DOTNET_ROOT}}
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
